<?xml version="1.0" encoding="utf-8"?>
<!--Generated by crowdin.net-->
<resources>
  <string name="app_name">Adam\'s Battery Saver</string>
  <string name="click_to_configure">click to configure</string>
  <string name="about">About</string>
  <string name="wifi">WiFi</string>
  <string name="data">Data</string>
  <string name="bluetooth">Blue</string>
  <string name="sync">Sync</string>
  <string name="disable">Manual</string>
  <string name="screen">Screen</string>
  <string name="power">Power</string>
  <string name="interval">Interval</string>
  <string name="save">Save</string>
  <string name="traffic">Traffic</string>
  <string name="sync_interval">synchronize every %d minutes</string>
  <string name="night_mode">Night Mode</string>
  <string name="from">from</string>
  <string name="to">to</string>
  <string name="service_running">service was running</string>
  <string name="service_not_running">service was not running</string>
  <string name="service_toggle">Service on/off</string>
  <string name="status_active">power saving active</string>
  <string name="status_inactive">power saving inactive</string>
  <string name="currently_running">currently running</string>
  <string name="pref_timeout_title">Timeout</string>
  <string name="pref_timeout_summary">Wait %d seconds before activating power save mode</string>
  <string name="pref_timeout_message">Seconds before activating power save mode</string>
  <string name="pref_interval_short_title">Short interval</string>
  <string name="pref_interval_short_summary">Synchronize accounts after %d minutes for the first time</string>
  <string name="pref_interval_short_message">Minutes to wait until checking accouts for the first time after enabling power save mode (e.g. to check early for new chat messages)</string>
  <string name="pref_wifi_traffic_limit_title">WiFi traffic limit</string>
  <string name="pref_wifi_traffic_limit_summary">Keep WiFi connection alive while transmitting/receiving more than %d kiB/min</string>
  <string name="pref_wifi_traffic_limit_message">Threshold in kiB/min to inhibit power save mode</string>
  <string name="pref_data_traffic_limit_title">Mobile data traffic limit</string>
  <string name="pref_data_traffic_limit_summary">Keep mobile data connection alive while transmitting/receiving more than %d kiB/min</string>
  <string name="pref_data_traffic_limit_message">Threshold in kiB/min to inhibit power save mode</string>
  <string name="pref_wifi_whitelist_title">WiFi whitelist</string>
  <string name="pref_wifi_whitelist_summary">Select Apps which will prevent WiFi from being switched off automatically</string>
  <string name="pref_data_whitelist_title">Mobile data whitelist</string>
  <string name="pref_data_whitelist_summary">Select Apps which will prevent mobile data from being switched off automatically</string>
  <string name="pref_blue_whitelist_title">Bluetooth whitelist</string>
  <string name="pref_blue_whitelist_summary">Select Apps which will prevent Bluetooth from being switched off automatically</string>
  <string name="pref_sync_whitelist_title">Global sync whitelist</string>
  <string name="pref_sync_whitelist_summary">Select Apps which will prevent the global sync setting from being switched off automatically</string>
  <string name="pref_only_top_task_title">Whitelist only top task</string>
  <string name="pref_only_top_task_summary_true">Only consider the top running task for whitelist</string>
  <string name="pref_only_top_task_summary_false">Consider all running tasks for whitelist</string>
  <string name="action_settings">Advanced Settings</string>
  <string name="action_view_source">View Sourcecode</string>
  <string name="action_view_translation">Help Translating!</string>
  <string name="action_view_bugs">Report A Problem</string>
</resources>
