<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:gravity="center_horizontal" >

    <TableLayout
        android:id="@+id/TableViewDeviceMatrix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:paddingTop="20dp" >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <org.thirdparty.VerticalTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:gravity="bottom"
                android:text="@string/disable"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <org.thirdparty.VerticalTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:gravity="bottom"
                android:text="@string/screen"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <org.thirdparty.VerticalTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:gravity="bottom"
                android:text="@string/power"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <org.thirdparty.VerticalTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:gravity="bottom"
                android:text="@string/interval"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <org.thirdparty.VerticalTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:gravity="bottom"
                android:text="@string/save"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <org.thirdparty.VerticalTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:gravity="bottom"
                android:text="@string/traffic"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>
    </TableLayout>
</ScrollView>
