<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainFragment" >

	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_vertical|center_horizontal"
	    android:gravity="center_horizontal"
	    android:orientation="vertical" >
	
	    <ToggleButton
	        android:id="@+id/toggleButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/service_toggle" />
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:orientation="vertical"
	        android:paddingTop="20dp" >
	
	        <LinearLayout
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_horizontal"
	            android:layout_weight="0" >
	
	            <TextView
	                android:id="@+id/sync_interval"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/sync_interval"
	                android:textAppearance="?android:attr/textAppearanceMedium" />
	
	        </LinearLayout>
	
	        <SeekBar
	            android:id="@+id/seekInterval"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_horizontal"
	            android:layout_weight="0"
	            android:indeterminate="false"
	            android:max="60"
	            android:progress="15" />
	
	    </LinearLayout>
	
	    <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:dividerPadding="100dp"
	        android:gravity="center_vertical|center_horizontal"
	        android:orientation="horizontal"
	        android:paddingTop="20dp"
	        android:showDividers="middle" >
	
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="match_parent"
	            android:layout_weight="0"
	            android:gravity="center_vertical"
	            android:text="@string/night_mode"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	
	        <Button
	            android:id="@+id/buttonFrom"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/from" />
	
	        <Button
	            android:id="@+id/buttonTo"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/to" />
	    </LinearLayout>
    </LinearLayout>
</ScrollView>